# ceramicraft-log-mservice

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  buf.gen.yaml  client.py  docker-compose.yml  generate_grpc.sh  main.py  pyproject.toml  reset_db.py  serve.py  sonar-project.properties  test_client.py
.github/: copilot-instructions.md
.github/workflows/: build.yml  deploy_argo.yml  lint.yml  pr_scan.yml  snyk.yml  sonar.yml  trivy.yml
postgres/: log_db.sql
protos/: audit_log.proto
src/ceramicraft_log_mservice/: service.py
src/ceramicraft_log_mservice/models/: audit_log.py
src/ceramicraft_log_mservice/pb/: audit_log_pb2.py  audit_log_pb2.pyi  audit_log_pb2_grpc.py
tests/: conftest.py  test_service.py
